istio/services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
spec:
  hosts:
    - "*"
  gateways:
    - http-gateway # 1
  http:
    - match:
        - uri:
            prefix: /kiali
      route:
        - destination:
            host: kiali
            port:
              number: 20001
